# libcutiefeedback

./: CMakeLists.txt  README.md
debian/: control
src/: cutiefeedback.cpp  cutiefeedback.h  cutiefeedback.pc.in
